[project]
name = "melutils"
version = "1.0.0"
description = "a discord bot mainly for moderation"
authors = [
    { name = "machineonamission" }
]
license = { text = "GPL-3" }
requires-python = ">=3.10"

dependencies = [
    "discord.py>=2.6.4",
    "coloredlogs>=15.0.1",
    "aiosqlite>=0.21.0",
    "docstring-parser>=0.17",
    "emojis>=0.7.0",
    "aiofiles>=25.1.0",
    "Pillow>=11.3.0",
    "tqdm>=4.67.1",
    "Faker>=37.11.0",
    "openpyxl>=3.1.2",
    "ImageHash>=4.3.2",
    "humanize @ git+https://github.com/machineonamission/humanize.git",
    "aioscheduler @ git+https://github.com/machineonamission/aioscheduler.git@tz_aware",
]
